// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio defaultChecked 1`] = `
<div
  class="za-radio za-radio--checked"
>
  <div
    class="za-radio__wrapper"
  >
    <span
      class="za-radio__inner"
    />
    <span
      class="za-radio__text"
    >
      选项一
    </span>
    <input
      checked=""
      class="za-radio__input"
      type="radio"
      value="0"
    />
  </div>
</div>
`;

exports[`Radio renders correctly 1`] = `
<div
  class="za-radio"
>
  <div
    class="za-radio__wrapper"
  >
    <span
      class="za-radio__inner"
    />
    <span
      class="za-radio__text"
    >
      选项一
    </span>
    <input
      class="za-radio__input"
      type="radio"
      value="0"
    />
  </div>
</div>
`;

exports[`Radio type is button 1`] = `
<button
  aria-disabled="false"
  class="za-button za-radio za-button--primary za-button--xs za-button--radius za-button--ghost"
  type="button"
>
  <span>
    <input
      class="za-radio__input"
      type="radio"
      value="0"
    />
    选项一
  </span>
</button>
`;

exports[`Radio type is cell 1`] = `
<div
  class="za-cell za-radio za-cell--link"
>
  <div
    class="za-cell__inner"
  >
    <div
      class="za-cell__header"
    />
    <div
      class="za-cell__body"
    >
      <div
        class="za-cell__content"
      >
        <input
          class="za-radio__input"
          type="radio"
          value="0"
        />
        选项一
      </div>
    </div>
    <div
      class="za-cell__footer"
    />
  </div>
</div>
`;

exports[`Radio.Group Radio checked 1`] = `
<div
  class="za-radio-group za-radio-group--radius"
>
  <div
    class="za-radio"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </div>
  </div>
  <div
    class="za-radio za-radio--checked"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </div>
  </div>
  <div
    class="za-radio"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </div>
  </div>
</div>
`;

exports[`Radio.Group defaultValue 1`] = `
<div
  class="za-radio-group za-radio-group--radius"
>
  <div
    class="za-radio"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </div>
  </div>
  <div
    class="za-radio za-radio--checked"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </div>
  </div>
  <div
    class="za-radio"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </div>
  </div>
</div>
`;

exports[`Radio.Group renders correctly 1`] = `
<div
  class="za-radio-group za-radio-group--radius"
>
  <div
    class="za-radio za-radio--checked"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        checked=""
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </div>
  </div>
  <div
    class="za-radio"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </div>
  </div>
  <div
    class="za-radio"
  >
    <div
      class="za-radio__wrapper"
    >
      <span
        class="za-radio__inner"
      />
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </div>
  </div>
</div>
`;

exports[`Radio.Group type is cell 1`] = `
<div
  className="za-radio-group za-radio-group--cell za-radio-group--radius"
>
  <Radio
    block={false}
    checked={true}
    disabled={false}
    key="0/.0"
    onChange={[Function]}
    prefixCls="za-radio"
    shape="radius"
    theme="primary"
    type="cell"
    value="0"
  >
    选项一
  </Radio>
  <Radio
    block={false}
    checked={false}
    disabled={false}
    key="1/.1"
    onChange={[Function]}
    prefixCls="za-radio"
    shape="radius"
    theme="primary"
    type="cell"
    value="1"
  >
    选项二
  </Radio>
  <Radio
    block={false}
    checked={false}
    disabled={true}
    key="2/.2"
    onChange={[Function]}
    prefixCls="za-radio"
    shape="radius"
    theme="primary"
    type="cell"
    value="2"
  >
    选项三
  </Radio>
</div>
`;
